force-app/main/default/objects/Task_Management__c/Task_Management__c.object-meta.xml
<CustomObject>
    <label>Task Management</label>
    <pluralLabel>Task Management</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Task Number</label>
        <displayFormat>TASK-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>