force-app/main/default/objects/Task_Management__c/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <label>AI Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>