force-app/main/default/objects/Task_Management__c/fields/AI_Summary_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Generated__c</fullName>
    <label>AI Summary Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>