force-app/main/default/objects/Task_Management__c/fields/AI_Summary_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Last_Updated__c</fullName>
    <label>AI Summary Last Updated</label>
    <type>DateTime</type>
</CustomField>