force-app/main/default/objects/Task_Management__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>